--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,8 @@ jobs:
 
     - name: Load secrets and save to app.env
       run:
-        aws secretsmanager get-secret-value --secret-id simple_bank --query SecretString --output text | \
+        apk add jq ; 
+        aws secretsmanager get-secret-value --secret-id simple_bank --query SecretString --output text | 
         jq -r 'to_entries|map("\(.key)=\(.value)")|.[]' >app.env
 
     - name: Build, tag, and push image to Amazon ECR
